eaton.frontend/src/components/list/css/views/_view-default.scss
//-----------------------------------
// List Component: View Deafult
//-----------------------------------

.eaton-list-component {

  margin-bottom: 60px;

  a {
    text-decoration: none;

    &:hover,
    &:active,
    &:visited,
    &:focus {
      color: $color__primary-blue;
      text-decoration: none;
    }
  }


  h2 {
    padding-bottom: 10px;

    .category-highlight & {
      padding-top: 120px;
    }
  }

  @include media-tablet-only {

    h2 {
      padding-bottom: 15px;
    }

  }




  /*


  .carousel-indicators {
    position: inherit;
    margin: 40px auto 0;
  }

  .carousel-indicators li {
    width: 15px;
    height: 15px;
    cursor: inherit;
    background-color: $color__primary-gray3;
    border: 0;
    border-radius: 50%;
    margin: 0 4px;
  }

  .carousel-indicators .active {
    background-color: $color__primary-blue;
    width: 15px;
    height: 15px;
    margin: 0 4px;
  }


*/
  .category__image {
    width: 100%;
  }

  .category__title--font,
  .related-category__title--font {
    font-size: 1em;
    font-weight: bold;
    color: $color__primary-gray1;
    text-transform: uppercase;
  }

  .category__item--border {
    border-left: 1px solid $color__secondary-gray4;
    border-right: 1px solid $color__secondary-gray4;
    border-bottom: 2px solid $color__secondary-gray4;
  }

  .category__link--font {
    font-size: 1.3em;
    font-weight: bold;
  }


  .category__item-innerpadding {
    padding: 30px 30px 15px 30px;
  }

  .category__title--bottompadding {
    padding-bottom: 10px;
  }

  .header-text__topmargin {
    margin-top: 5%;
  }

  .category__item {
    min-height: 310px;
  }

  .category-item-date {

    &--gray2 {
      color: $color__primary-gray2;
      padding-top: 15px;
    }

    &--gray3 {
      color: $color__primary-gray3;
      padding-top: 10px;
    }

    &--padding {
      @include media-desktop-and-up {
        padding-bottom: 30px;
      }
    }
  }

  @include media-mobile-only {
    .category__item-innerpadding {
      padding: 30px 50px 15px 50px;
    }

    .carousel__item {
      min-height: 233px;
    }

    .category__link--font {
      font-size: 1.1em;
      line-height: 1.2em;
    }

    .category__title--bottompadding {
      padding-bottom: 10px;
    }
  }



  @include media-tablet-only {
    .related-category--tablet-left {
      float: left;
    }

    .related-category--tablet-right {
      float: right;
    }

    .category__item--border {
      border-top: 1px solid $color__secondary-gray4;
      background-color: $color__white;
    }

    .equal-height-row {
      margin-bottom: 30px;
      display: flex;
      flex-wrap: wrap;

      > div {
        width: 50%;
        display: inline-block;
      }
    }

    .category__item,
    .category__image {
      min-height: 263px;
    }

    .category__link--font {
      font-size: 1.3em;
    }
  }

  &-default-view {
    margin-top: 60px;
  }
}

.listdefault {

  &__slides {
    padding: 0;
    list-style: none;
    display: flex;

    .slick-track {
      display: flex;
      flex-direction: row;
      flex-wrap: wrap;
    }

    .slick-slide {
      height: auto;
    }

    .slick-active button {
      background-color: $color__primary-blue;
    }
  }


  &__link {
    height: 100%;
  }

  &__card {
    border: 1px solid $color__secondary-gray4;
    height: 100%;

    .category-item-date {
      color: $color__primary-gray3;
    }

    .rendition img {
      width: 100%;
    }

  }

  &__content {
    padding: 30px 30px 15px 30px;
    background: $color__white;
  }



  @include media-mobile-only {

    &__slides {
      display: block;
    }

    &__image {
      width: 100%;
    }

    &__content {
      padding: 15px 15px 0 15px;
      width: 100%;
    }

  }

  @include media-tablet-only {


    &__slides {
      display: block;
    }

    &__card {
      margin-bottom: 20px;
      display: flex;
    }

    &__image {
      width: 50%;
    }

    &__content {
      padding: 30px 15px 15px 30px;
      width: 50%;
    }

  }

}

